fixed issue with buttons overlapping others even if not visible anymore and changed code unit started names

--- a/webview-ui/src/index.css
+++ b/webview-ui/src/index.css
@@ -45,6 +45,7 @@ h1 {
 
 .data-item.hide {
     max-height: 0px;
+    max-width: 0px;
     opacity: 0;
     margin: 0;
     padding: 0;
